# mc_trex

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md
docs/examples/: Trajectory classification.ipynb  cluster11.nc  cluster13.nc  cluster14.nc  cluster15.nc  cluster17.nc  cluster18.nc  cluster6.nc  example1.prmtop  rmsfit_0_cluster7.nc
docs/source/: conf.py  generate_docs.py  index.rst  mc_trex.post_processing.dna_non_bonded.rst  mc_trex.post_processing.fit_func.rst  mc_trex.post_processing.general_helper_functions.rst  mc_trex.post_processing.native_contacts.rst  mc_trex.post_processing.read_amber.rst  mc_trex.post_processing.rst  mc_trex.post_processing.traj_classification.rst  mc_trex.rst  mc_trex.trajectory_manipulation.gen_Tcont_traj.rst  mc_trex.trajectory_manipulation.gen_stripped_traj.rst  mc_trex.trajectory_manipulation.rst  mc_trex.trex_analyses.rst  mc_trex.trex_analyses.trex_checks.rst
src/mc_trex/: __init__.py
src/mc_trex/post_processing/: dna_non_bonded.py  fit_func.py  general_helper_functions.py  native_contacts.py  read_amber.py  traj_classification.py
src/mc_trex/trajectory_manipulation/: gen_Tcont_traj.py  gen_stripped_traj.py
src/mc_trex/trex_analyses/: trex_checks.py
tests/: rmsfit_gcgcagc.nc  test_rmsdcalculation.py
tests/input_samples/: dry_hp7_tumuc_1M.1.nc  gcgcagc_ref.nc  tumuc_gcgcagc.prmtop
